--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,7 @@ dependencies:
   intl: ^0.17.0-nullsafety.2
   http: ^0.12.2
   html: ^0.14.0+4
-  webview_flutter_plus: ^0.1.1+10
+  flutter_inappwebview: ^4.0.0+4
   url_launcher: ^5.7.10
   sqflite: ^1.3.2+1
   path: ^1.7.0
