--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -63,6 +63,8 @@ android {
     buildTypes {
         release {
             signingConfig signingConfigs.release
+            shrinkResources false
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
 }
