--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.0+4
+version: 1.0.1+5
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
@@ -43,6 +43,7 @@ dependencies:
   responsive_builder: ^0.3.0
   cached_network_image: ^2.5.0
   flutter_cache_manager: ^2.1.0
+  lpinyin: ^1.1.0
   modal_bottom_sheet: ^1.0.0+1
   overlay_dialog: ^0.0.3
 
