--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   cached_network_image: ^2.5.0
   flutter_cache_manager: ^2.1.0
   lpinyin: ^1.1.0
+  uni_links: ^0.4.0
   modal_bottom_sheet: ^1.0.0+1
   overlay_dialog: ^0.0.3
 
