--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.1+6
+version: 1.0.2+8
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
@@ -25,28 +25,28 @@ dependencies:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
-  provider: ^4.3.2+3
-  tuple: ^1.0.3
-  shared_preferences: ^0.5.12+4
+  provider: ^5.0.0
+  tuple: ^2.0.0
+  shared_preferences: ^2.0.6
   intl: ^0.17.0-nullsafety.2
-  http: ^0.12.2
-  html: ^0.14.0+4
-  webview_flutter: ^2.0.0-nullsafety.3
-  jaguar: ^2.4.46
-  jaguar_flutter_asset: ^2.2.0
-  url_launcher: ^5.7.10
-  sqflite: ^1.3.2+1
-  path: ^1.7.0
-  share: '>=0.6.5+4 <2.0.0'
-  package_info: '>=0.4.3+1 <2.0.0'
-  crypto: ^2.1.5
-  responsive_builder: ^0.3.0
-  cached_network_image: ^2.5.0
-  flutter_cache_manager: ^2.1.0
-  lpinyin: ^1.1.0
-  uni_links: ^0.4.0
-  modal_bottom_sheet: ^1.0.0+1
-  overlay_dialog: ^0.0.3
+  http: ^0.13.3
+  html: ^0.15.0
+  webview_flutter: ^2.0.10
+  jaguar: ^3.0.11
+  jaguar_flutter_asset: ^3.0.0
+  url_launcher: ^6.0.9
+  sqflite: ^2.0.0+3
+  path: ^1.8.0
+  share: ^2.0.4
+  package_info: ^2.0.2
+  crypto: ^3.0.1
+  responsive_builder: ^0.4.1
+  cached_network_image: ^3.0.0
+  flutter_cache_manager: ^3.1.2
+  lpinyin: ^2.0.3
+  uni_links: ^0.5.1
+  modal_bottom_sheet: ^2.0.0
+  overlay_dialog: ^0.2.0
 
 
   # The following adds the Cupertino Icons font to your application.
