--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.2+8
+version: 1.0.3+10
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
@@ -25,13 +25,13 @@ dependencies:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
-  provider: ^5.0.0
+  provider: ^6.0.3
   tuple: ^2.0.0
-  shared_preferences: ^2.0.6
-  intl: ^0.17.0-nullsafety.2
-  http: ^0.13.3
+  shared_preferences: ^2.0.15
+  intl: ^0.17.0
+  http: ^0.13.4
   html: ^0.15.0
-  webview_flutter: ^2.0.10
+  webview_flutter: ^3.0.4
   jaguar: ^3.0.11
   jaguar_flutter_asset: ^3.0.0
   url_launcher: ^6.0.9
@@ -41,11 +41,11 @@ dependencies:
   package_info: ^2.0.2
   crypto: ^3.0.1
   responsive_builder: ^0.4.1
-  cached_network_image: ^3.0.0
-  flutter_cache_manager: ^3.1.2
+  cached_network_image: ^3.2.1
+  flutter_cache_manager: ^3.3.0
   lpinyin: ^2.0.3
   uni_links: ^0.5.1
-  modal_bottom_sheet: ^2.0.0
+  modal_bottom_sheet: ^2.1.0
   overlay_dialog: ^0.2.0
 
 
