--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.3+10
+version: 1.0.4+11
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
@@ -45,7 +45,7 @@ dependencies:
   flutter_cache_manager: ^3.3.0
   lpinyin: ^2.0.3
   uni_links: ^0.5.1
-  modal_bottom_sheet: ^2.1.0
+  modal_bottom_sheet: ^3.0.0-pre
   overlay_dialog: ^0.2.0
 
 
